playing around a second time

--- a/index.ipynb
+++ b/index.ipynb
@@ -914,34 +914,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "name           0\n",
-       "Gender         0\n",
-       "Eye color      0\n",
-       "Race           0\n",
-       "Hair color     0\n",
-       "Height         0\n",
-       "Publisher     15\n",
-       "Skin color     0\n",
-       "Alignment      0\n",
-       "Weight         0\n",
-       "dtype: int64"
+       "-99.0    229\n",
+       " 54.0     23\n",
+       " 79.0     23\n",
+       " 81.0     22\n",
+       " 90.0     19\n",
+       "Name: Weight, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "heroes_df.Weight.value_counts().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mean_weight = heroes_df.Weight.mean()\n",
-    "new_weight = heroes_df.Weight.fillna(value=mean_weight, inplace=True)\n",
-    "heroes_df.isna().sum()"
+    "heroes_df.Weight.fillna(value=mean_weight, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-99.0    229\n",
+       " 54.0     23\n",
+       " 79.0     23\n",
+       " 81.0     22\n",
+       " 90.0     19\n",
+       "Name: Weight, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heroes_df.Weight.value_counts().head() #didn't seem to change anything"
    ]
   },
   {
