--- a/index.ipynb
+++ b/index.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Project---Data-Cleaning\" data-toc-modified-id=\"Project---Data-Cleaning-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Project - Data Cleaning</a></span><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#The-Dataset\" data-toc-modified-id=\"The-Dataset-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>The Dataset</a></span></li><li><span><a href=\"#Goals\" data-toc-modified-id=\"Goals-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Goals</a></span></li><li><span><a href=\"#Getting-Started\" data-toc-modified-id=\"Getting-Started-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Getting Started</a></span></li><li><span><a href=\"#Familiarize-Yourself-With-the-Dataset\" data-toc-modified-id=\"Familiarize-Yourself-With-the-Dataset-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Familiarize Yourself With the Dataset</a></span></li><li><span><a href=\"#Dealing-with-Null-Values\" data-toc-modified-id=\"Dealing-with-Null-Values-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Dealing with Null Values</a></span></li><li><span><a href=\"#Joining,-Grouping,-and-Aggregating\" data-toc-modified-id=\"Joining,-Grouping,-and-Aggregating-1.8\"><span class=\"toc-item-num\">1.8&nbsp;&nbsp;</span>Joining, Grouping, and Aggregating</a></span></li><li><span><a href=\"#Some-Initial-Investigation\" data-toc-modified-id=\"Some-Initial-Investigation-1.9\"><span class=\"toc-item-num\">1.9&nbsp;&nbsp;</span>Some Initial Investigation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Sample-Question:-Most-Common-Powers\" data-toc-modified-id=\"Sample-Question:-Most-Common-Powers-1.9.1\"><span class=\"toc-item-num\">1.9.1&nbsp;&nbsp;</span>Sample Question: Most Common Powers</a></span></li><li><span><a href=\"#Your-Own-Investigation\" data-toc-modified-id=\"Your-Own-Investigation-1.9.2\"><span class=\"toc-item-num\">1.9.2&nbsp;&nbsp;</span>Your Own Investigation</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-1.10\"><span class=\"toc-item-num\">1.10&nbsp;&nbsp;</span>Summary</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Project - Data Cleaning\n",
@@ -1495,24 +1505,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'heroes_and_powers_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3ee9713ff8f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpower_counts_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0moverall_top_5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtop_5_powers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheroes_and_powers_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mmarvel_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheroes_and_powers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheroes_and_powers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Publisher'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Marvel Comics'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mdc_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheroes_and_powers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheroes_and_powers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Publisher'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'DC Comics'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'heroes_and_powers_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def top_5_powers(dataframe):\n",
+    "    df = dataframe.drop(heroes_df.columns.values[1:], axis=1)\n",
+    "    columns = df.columns.values\n",
+    "    for col in columns:\n",
+    "        df[col] = df[col].map({'True': 1, 'False': 0})\n",
+    "        \n",
+    "    power_counts_dict = dict(df.sum())\n",
+    "    \n",
+    "    return sorted(power_counts_dict.items(), key=lambda x: x[1], reverse=True)[:5] \n",
+    "    \n",
+    "overall_top_5 = top_5_powers(heroes_and_powers_df)\n",
+    "marvel_df = heroes_and_powers_df[heroes_and_powers_df['Publisher'] == 'Marvel Comics']\n",
+    "dc_df = heroes_and_powers_df[heroes_and_powers_df['Publisher'] == 'DC Comics']\n",
+    "print(overall_top_5)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marvel_top_5 = top_5_powers(marvel_df)\n",
+    "print(marvel_top_5)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dc_top_5 = top_5_powers(dc_df)\n",
+    "print(dc_top_5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1627,7 +1670,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
